--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "heroku-postbuild": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
     "@angular-devkit/core": "^8.3.21",
     "@angular/animations": "~8.1.0",
     "@angular/cdk": "^8.2.0",
-    "@angular/cli": "^8.3.5",
+    "@angular/cli": "^8.3.21",
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
     "@angular/compiler-cli": "~8.1.0",
@@ -71,7 +71,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
     "@angular-devkit/core": "^8.3.21",
-    "@angular/cli": "^8.3.5",
+    "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "~8.1.0",
     "@angular/language-service": "~8.1.0",
     "@types/jasmine": "~3.3.8",
