--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/devextreme/dist/css/dx.common.css",
-              "./node_modules/devextreme/dist/css/dx.light.css",
-              "./node_modules/@syncfusion/ej2-angular-buttons/styles/material.css"
+              "./node_modules/devextreme/dist/css/dx.light.css"
             ],
             "scripts": ["./node_modules/hammerjs/hammer.min.js"]
           },
@@ -93,8 +92,7 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/devextreme/dist/css/dx.common.css",
-              "./node_modules/devextreme/dist/css/dx.light.css",
-              "./node_modules/@syncfusion/ej2-angular-buttons/styles/material.css"
+              "./node_modules/devextreme/dist/css/dx.light.css"
             ],
             "scripts": ["./node_modules/hammerjs/hammer.min.js"]
           }
