--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/compiler-cli": "~8.1.0",
     "@angular/core": "~8.1.0",
     "@angular/forms": "~8.1.0",
+    "@angular/language-service": "~8.1.0",
     "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
@@ -30,43 +31,38 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
-    "@syncfusion/ej2-angular-buttons": "^17.4.51",
     "@syncfusion/ej2-angular-charts": "*",
     "@syncfusion/ej2-angular-grids": "*",
-    "ag-grid-angular": "^23.1.0",
-    "ag-grid-community": "^23.1.0",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.10.59",
     "angular-animate": "^1.7.8",
     "angular-sortablejs": "^2.7.0",
     "bootstrap": "^4.3.1",
+    "codelyzer": "^5.0.0",
     "devextreme": "^19.2.4",
     "devextreme-angular": "^19.2.4",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
-    "jquery": "^1.9.1",
-    "ngx-pagination": "^5.0.0",
-    "ngx-show-hide-password": "^2.1.0",
-    "pepjs": "^0.5.2",
-    "rxjs": "~6.4.0",
-    "sortablejs": "^1.10.0",
-    "stream": "0.0.2",
-    "tslib": "^1.9.0",
-    "typescript": "~3.4.3",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "zone.js": "~0.9.1",
-    "@angular/language-service": "~8.1.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.10.59",
-    "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "jquery": "^1.9.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0"
+    "ngx-show-hide-password": "^2.1.0",
+    "pepjs": "^0.5.2",
+    "protractor": "~5.4.0",
+    "rxjs": "~6.4.0",
+    "sortablejs": "^1.10.0",
+    "stream": "0.0.2",
+    "ts-node": "~7.0.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
@@ -78,6 +74,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.10.59",
     "codelyzer": "^5.0.0",
+    "devextreme": "^19.2.4",
+    "devextreme-angular": "^19.2.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -85,14 +83,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "ngx-pagination": "^5.0.0",
+    "ngx-show-hide-password": "^2.1.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3",
-    "ngx-pagination": "^5.0.0",
-    "ngx-show-hide-password": "^2.1.0",
-    "devextreme": "^19.2.4",
-    "devextreme-angular": "^19.2.4"
+    "typescript": "~3.4.3"
   },
   "engines": {
     "node": "~10.9.0",
